--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <header class="bg-primary text-white text-center py-5">
     <div class="container">
         <h1>Lyes Sehila</h1> <!-- Titre principal -->
-        <p class="lead"> Développeur Passionné | Ambitieux | Curieux </p>
+        <p class="lead"> Passionné | Ambitieux | Curieux </p>
     </div>
 </header>
 
